6mszczep/parser.output
State 41 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 189 conflicts: 1 shift/reduce


Grammar

    0 $accept: code $end

    1 code: program uses const var functions procedures main

    2 program: PROGRAM IDENTIFIER ';'

    3 uses: USES identifiers ';'
    4     | %empty

    5 const: CONST constDecls
    6      | %empty

    7 var: VAR varDecls
    8    | %empty

    9 functions: function functions
   10          | %empty

   11 function: FUNCTION funcDecl var statement ';'

   12 procedures: procedure procedures
   13           | %empty

   14 procedure: PROCEDURE procDecl var statement ';'

   15 main: BEGGIN statements END '.'

   16 constDecls: constDecl ';' constDecls
   17           | constDecl ';'

   18 constDecl: identifiers '=' expression
   19          | identifiers ':' DATATYPE '=' expression
   20          | identifiers ':' SET OF subscript
   21          | identifiers ':' SET OF '(' expressions ')'

   22 varDecls: varDecl ';' varDecls
   23         | varDecl ';'

   24 varDecl: identifiers ':' DATATYPE '=' expression
   25        | identifiers ':' DATATYPE
   26        | identifiers ':' SET OF subscript
   27        | identifiers ':' SET OF '(' expressions ')'
   28        | identifiers ':' ARRAY '[' subscripts ']' OF DATATYPE
   29        | identifiers ':' ARRAY '[' DATATYPE ']' OF DATATYPE

   30 funcDecl: IDENTIFIER params ':' DATATYPE ';'

   31 procDecl: IDENTIFIER params ';'

   32 identifiers: IDENTIFIER ',' identifiers
   33            | IDENTIFIER

   34 subscripts: subscript ',' subscripts
   35           | subscript

   36 subscript: expression ".." expression
   37          | PAIN

   38 params: '(' params1 ')'
   39       | %empty

   40 params1: param ',' params1
   41        | param

   42 param: identifiers ':' DATATYPE

   43 statements: statement ';' statements
   44           | statement

   45 statement: BEGGIN statements END
   46          | FOR statement TO expression DO statement
   47          | WHILE expression DO statement
   48          | REPEAT statements UNTIL expression
   49          | IF expression THEN statement else
   50          | expression ":=" expression
   51          | expression
   52          | HALT
   53          | %empty

   54 else: ELSE statement
   55     | %empty

   56 expressions: expression ',' expressions
   57            | expression

   58 expression: VALUE
   59           | IDENTIFIER
   60           | '(' expression ')'
   61           | expression '[' expressions ']'
   62           | expression '(' ')'
   63           | expression '(' expressions ')'
   64           | expression '*' expression
   65           | expression '/' expression
   66           | expression "div" expression
   67           | expression "mod" expression
   68           | expression "and" expression
   69           | expression '&' expression
   70           | expression '|' expression
   71           | expression '!' expression
   72           | expression '+' expression
   73           | expression '-' expression
   74           | expression "or" expression
   75           | expression '=' expression
   76           | expression "<>" expression
   77           | expression '<' expression
   78           | expression "<=" expression
   79           | expression '>' expression
   80           | expression ">=" expression
   81           | expression "in" expression
   82           | expression "or else" expression
   83           | expression "and then" expression
   84           | '~' expression
   85           | "not" expression
   86           | '+' expression
   87           | '-' expression


Terminals, with rules where they appear

$end (0) 0
'!' (33) 71
'&' (38) 69
'(' (40) 21 27 38 60 62 63
')' (41) 21 27 38 60 62 63
'*' (42) 64
'+' (43) 72 86
',' (44) 32 34 40 56
'-' (45) 73 87
'.' (46) 15
'/' (47) 65
':' (58) 19 20 21 24 25 26 27 28 29 30 42
';' (59) 2 3 11 14 16 17 22 23 30 31 43
'<' (60) 77
'=' (61) 18 19 24 75
'>' (62) 79
'[' (91) 28 29 61
']' (93) 28 29 61
'|' (124) 70
'~' (126) 84
error (256)
PAIN (258) 37
HALT (259) 52
PROGRAM (260) 2
USES (261) 3
CONST (262) 5
VAR (263) 7
FUNCTION (264) 11
PROCEDURE (265) 14
IDENTIFIER (266) 2 30 31 32 33 59
DATATYPE (267) 19 24 25 28 29 30 42
VALUE (268) 58
BEGGIN (269) 15 45
END (270) 15 45
SET (271) 20 21 26 27
ARRAY (272) 28 29
OF (273) 20 21 26 27 28 29
IF (274) 49
THEN (275) 49
ELSE (276) 54
WHILE (277) 47
FOR (278) 46
TO (279) 46
DO (280) 46 47
REPEAT (281) 48
UNTIL (282) 48
"or else" (283) 82
"and then" (284) 83
":=" (285) 50
"<>" (286) 76
"<=" (287) 78
">=" (288) 80
"in" (289) 81
"or" (290) 74
"div" (291) 66
"mod" (292) 67
"and" (293) 68
"not" (294) 85
".." (295) 36


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
code (61)
    on left: 1, on right: 0
program (62)
    on left: 2, on right: 1
uses (63)
    on left: 3 4, on right: 1
const (64)
    on left: 5 6, on right: 1
var (65)
    on left: 7 8, on right: 1 11 14
functions (66)
    on left: 9 10, on right: 1 9
function (67)
    on left: 11, on right: 9
procedures (68)
    on left: 12 13, on right: 1 12
procedure (69)
    on left: 14, on right: 12
main (70)
    on left: 15, on right: 1
constDecls (71)
    on left: 16 17, on right: 5 16
constDecl (72)
    on left: 18 19 20 21, on right: 16 17
varDecls (73)
    on left: 22 23, on right: 7 22
varDecl (74)
    on left: 24 25 26 27 28 29, on right: 22 23
funcDecl (75)
    on left: 30, on right: 11
procDecl (76)
    on left: 31, on right: 14
identifiers (77)
    on left: 32 33, on right: 3 18 19 20 21 24 25 26 27 28 29 32 42
subscripts (78)
    on left: 34 35, on right: 28 34
subscript (79)
    on left: 36 37, on right: 20 26 34 35
params (80)
    on left: 38 39, on right: 30 31
params1 (81)
    on left: 40 41, on right: 38 40
param (82)
    on left: 42, on right: 40 41
statements (83)
    on left: 43 44, on right: 15 43 45 48
statement (84)
    on left: 45 46 47 48 49 50 51 52 53, on right: 11 14 43 44 46 47
    49 54
else (85)
    on left: 54 55, on right: 49
expressions (86)
    on left: 56 57, on right: 21 27 56 61 63
expression (87)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
    76 77 78 79 80 81 82 83 84 85 86 87, on right: 18 19 24 36 46 47
    48 49 50 51 56 57 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 87


State 0

    0 $accept: . code $end
    1 code: . program uses const var functions procedures main
    2 program: . PROGRAM IDENTIFIER ';'

    PROGRAM  shift, and go to state 1

    code     go to state 2
    program  go to state 3


State 1

    2 program: PROGRAM . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: code . $end

    $end  shift, and go to state 5


State 3

    1 code: program . uses const var functions procedures main
    3 uses: . USES identifiers ';'
    4     | . %empty  [CONST, VAR, FUNCTION, PROCEDURE, BEGGIN]

    USES  shift, and go to state 6

    $default  reduce using rule 4 (uses)

    uses  go to state 7


State 4

    2 program: PROGRAM IDENTIFIER . ';'

    ';'  shift, and go to state 8


State 5

    0 $accept: code $end .

    $default  accept


State 6

    3 uses: USES . identifiers ';'
   32 identifiers: . IDENTIFIER ',' identifiers
   33            | . IDENTIFIER

    IDENTIFIER  shift, and go to state 9

    identifiers  go to state 10


State 7

    1 code: program uses . const var functions procedures main
    5 const: . CONST constDecls
    6      | . %empty  [VAR, FUNCTION, PROCEDURE, BEGGIN]

    CONST  shift, and go to state 11

    $default  reduce using rule 6 (const)

    const  go to state 12


State 8

    2 program: PROGRAM IDENTIFIER ';' .

    $default  reduce using rule 2 (program)


State 9

   32 identifiers: IDENTIFIER . ',' identifiers
   33            | IDENTIFIER .  ['=', ';', ':']

    ','  shift, and go to state 13

    $default  reduce using rule 33 (identifiers)


State 10

    3 uses: USES identifiers . ';'

    ';'  shift, and go to state 14


State 11

    5 const: CONST . constDecls
   16 constDecls: . constDecl ';' constDecls
   17           | . constDecl ';'
   18 constDecl: . identifiers '=' expression
   19          | . identifiers ':' DATATYPE '=' expression
   20          | . identifiers ':' SET OF subscript
   21          | . identifiers ':' SET OF '(' expressions ')'
   32 identifiers: . IDENTIFIER ',' identifiers
   33            | . IDENTIFIER

    IDENTIFIER  shift, and go to state 9

    constDecls   go to state 15
    constDecl    go to state 16
    identifiers  go to state 17


State 12

    1 code: program uses const . var functions procedures main
    7 var: . VAR varDecls
    8    | . %empty  [FUNCTION, PROCEDURE, BEGGIN]

    VAR  shift, and go to state 18

    $default  reduce using rule 8 (var)

    var  go to state 19


State 13

   32 identifiers: . IDENTIFIER ',' identifiers
   32            | IDENTIFIER ',' . identifiers
   33            | . IDENTIFIER

    IDENTIFIER  shift, and go to state 9

    identifiers  go to state 20


State 14

    3 uses: USES identifiers ';' .

    $default  reduce using rule 3 (uses)


State 15

    5 const: CONST constDecls .

    $default  reduce using rule 5 (const)


State 16

   16 constDecls: constDecl . ';' constDecls
   17           | constDecl . ';'

    ';'  shift, and go to state 21


State 17

   18 constDecl: identifiers . '=' expression
   19          | identifiers . ':' DATATYPE '=' expression
   20          | identifiers . ':' SET OF subscript
   21          | identifiers . ':' SET OF '(' expressions ')'

    '='  shift, and go to state 22
    ':'  shift, and go to state 23


State 18

    7 var: VAR . varDecls
   22 varDecls: . varDecl ';' varDecls
   23         | . varDecl ';'
   24 varDecl: . identifiers ':' DATATYPE '=' expression
   25        | . identifiers ':' DATATYPE
   26        | . identifiers ':' SET OF subscript
   27        | . identifiers ':' SET OF '(' expressions ')'
   28        | . identifiers ':' ARRAY '[' subscripts ']' OF DATATYPE
   29        | . identifiers ':' ARRAY '[' DATATYPE ']' OF DATATYPE
   32 identifiers: . IDENTIFIER ',' identifiers
   33            | . IDENTIFIER

    IDENTIFIER  shift, and go to state 9

    varDecls     go to state 24
    varDecl      go to state 25
    identifiers  go to state 26


State 19

    1 code: program uses const var . functions procedures main
    9 functions: . function functions
   10          | . %empty  [PROCEDURE, BEGGIN]
   11 function: . FUNCTION funcDecl var statement ';'

    FUNCTION  shift, and go to state 27

    $default  reduce using rule 10 (functions)

    functions  go to state 28
    function   go to state 29


State 20

   32 identifiers: IDENTIFIER ',' identifiers .

    $default  reduce using rule 32 (identifiers)


State 21

   16 constDecls: . constDecl ';' constDecls
   16           | constDecl ';' . constDecls
   17           | . constDecl ';'
   17           | constDecl ';' .  [VAR, FUNCTION, PROCEDURE, BEGGIN]
   18 constDecl: . identifiers '=' expression
   19          | . identifiers ':' DATATYPE '=' expression
   20          | . identifiers ':' SET OF subscript
   21          | . identifiers ':' SET OF '(' expressions ')'
   32 identifiers: . IDENTIFIER ',' identifiers
   33            | . IDENTIFIER

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 17 (constDecls)

    constDecls   go to state 30
    constDecl    go to state 16
    identifiers  go to state 17


State 22

   18 constDecl: identifiers '=' . expression
   58 expression: . VALUE
   59           | . IDENTIFIER
   60           | . '(' expression ')'
   61           | . expression '[' expressions ']'
   62           | . expression '(' ')'
   63           | . expression '(' expressions ')'
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression "div" expression
   67           | . expression "mod" expression
   68           | . expression "and" expression
   69           | . expression '&' expression
   70           | . expression '|' expression
   71           | . expression '!' expression
   72           | . expression '+' expression
   73           | . expression '-' expression
   74           | . expression "or" expression
   75           | . expression '=' expression
   76           | . expression "<>" expression
   77           | . expression '<' expression
   78           | . expression "<=" expression
   79           | . expression '>' expression
   80           | . expression ">=" expression
   81           | . expression "in" expression
   82           | . expression "or else" expression
   83           | . expression "and then" expression
   84           | . '~' expression
   85           | . "not" expression
   86           | . '+' expression
   87           | . '-' expression

    IDENTIFIER  shift, and go to state 31
    VALUE       shift, and go to state 32
    "not"       shift, and go to state 33
    '+'         shift, and go to state 34
    '-'         shift, and go to state 35
    '~'         shift, and go to state 36
    '('         shift, and go to state 37

    expression  go to state 38


State 23

   19 constDecl: identifiers ':' . DATATYPE '=' expression
   20          | identifiers ':' . SET OF subscript
   21          | identifiers ':' . SET OF '(' expressions ')'

    DATATYPE  shift, and go to state 39
    SET       shift, and go to state 40


State 24

    7 var: VAR varDecls .

    $default  reduce using rule 7 (var)


State 25

   22 varDecls: varDecl . ';' varDecls
   23         | varDecl . ';'

    ';'  shift, and go to state 41


State 26

   24 varDecl: identifiers . ':' DATATYPE '=' expression
   25        | identifiers . ':' DATATYPE
   26        | identifiers . ':' SET OF subscript
   27        | identifiers . ':' SET OF '(' expressions ')'
   28        | identifiers . ':' ARRAY '[' subscripts ']' OF DATATYPE
   29        | identifiers . ':' ARRAY '[' DATATYPE ']' OF DATATYPE

    ':'  shift, and go to state 42


State 27

   11 function: FUNCTION . funcDecl var statement ';'
   30 funcDecl: . IDENTIFIER params ':' DATATYPE ';'

    IDENTIFIER  shift, and go to state 43

    funcDecl  go to state 44


State 28

    1 code: program uses const var functions . procedures main
   12 procedures: . procedure procedures
   13           | . %empty  [BEGGIN]
   14 procedure: . PROCEDURE procDecl var statement ';'

    PROCEDURE  shift, and go to state 45

    $default  reduce using rule 13 (procedures)

    procedures  go to state 46
    procedure   go to state 47


State 29

    9 functions: . function functions
    9          | function . functions
   10          | . %empty  [PROCEDURE, BEGGIN]
   11 function: . FUNCTION funcDecl var statement ';'

    FUNCTION  shift, and go to state 27

    $default  reduce using rule 10 (functions)

    functions  go to state 48
    function   go to state 29


State 30

   16 constDecls: constDecl ';' constDecls .

    $default  reduce using rule 16 (constDecls)


State 31

   59 expression: IDENTIFIER .

    $default  reduce using rule 59 (expression)


State 32

   58 expression: VALUE .

    $default  reduce using rule 58 (expression)


State 33

   58 expression: . VALUE
   59           | . IDENTIFIER
   60           | . '(' expression ')'
   61           | . expression '[' expressions ']'
   62           | . expression '(' ')'
   63           | . expression '(' expressions ')'
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression "div" expression
   67           | . expression "mod" expression
   68           | . expression "and" expression
   69           | . expression '&' expression
   70           | . expression '|' expression
   71           | . expression '!' expression
   72           | . expression '+' expression
   73           | . expression '-' expression
   74           | . expression "or" expression
   75           | . expression '=' expression
   76           | . expression "<>" expression
   77           | . expression '<' expression
   78           | . expression "<=" expression
   79           | . expression '>' expression
   80           | . expression ">=" expression
   81           | . expression "in" expression
   82           | . expression "or else" expression
   83           | . expression "and then" expression
   84           | . '~' expression
   85           | . "not" expression
   85           | "not" . expression
   86           | . '+' expression
   87           | . '-' expression

    IDENTIFIER  shift, and go to state 31
    VALUE       shift, and go to state 32
    "not"       shift, and go to state 33
    '+'         shift, and go to state 34
    '-'         shift, and go to state 35
    '~'         shift, and go to state 36
    '('         shift, and go to state 37

    expression  go to state 49


State 34

   58 expression: . VALUE
   59           | . IDENTIFIER
   60           | . '(' expression ')'
   61           | . expression '[' expressions ']'
   62           | . expression '(' ')'
   63           | . expression '(' expressions ')'
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression "div" expression
   67           | . expression "mod" expression
   68           | . expression "and" expression
   69           | . expression '&' expression
   70           | . expression '|' expression
   71           | . expression '!' expression
   72           | . expression '+' expression
   73           | . expression '-' expression
   74           | . expression "or" expression
   75           | . expression '=' expression
   76           | . expression "<>" expression
   77           | . expression '<' expression
   78           | . expression "<=" expression
   79           | . expression '>' expression
   80           | . expression ">=" expression
   81           | . expression "in" expression
   82           | . expression "or else" expression
   83           | . expression "and then" expression
   84           | . '~' expression
   85           | . "not" expression
   86           | . '+' expression
   86           | '+' . expression
   87           | . '-' expression

    IDENTIFIER  shift, and go to state 31
    VALUE       shift, and go to state 32
    "not"       shift, and go to state 33
    '+'         shift, and go to state 34
    '-'         shift, and go to state 35
    '~'         shift, and go to state 36
    '('         shift, and go to state 37

    expression  go to state 50


State 35

   58 expression: . VALUE
   59           | . IDENTIFIER
   60           | . '(' expression ')'
   61           | . expression '[' expressions ']'
   62           | . expression '(' ')'
   63           | . expression '(' expressions ')'
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression "div" expression
   67           | . expression "mod" expression
   68           | . expression "and" expression
   69           | . expression '&' expression
   70           | . expression '|' expression
   71           | . expression '!' expression
   72           | . expression '+' expression
   73           | . expression '-' expression
   74           | . expression "or" expression
   75           | . expression '=' expression
   76           | . expression "<>" expression
   77           | . expression '<' expression
   78           | . expression "<=" expression
   79           | . expression '>' expression
   80           | . expression ">=" expression
   81           | . expression "in" expression
   82           | . expression "or else" expression
   83           | . expression "and then" expression
   84           | . '~' expression
   85           | . "not" expression
   86           | . '+' expression
   87           | . '-' expression
   87           | '-' . expression

    IDENTIFIER  shift, and go to state 31
    VALUE       shift, and go to state 32
    "not"       shift, and go to state 33
    '+'         shift, and go to state 34
    '-'         shift, and go to state 35
    '~'         shift, and go to state 36
    '('         shift, and go to state 37

    expression  go to state 51


State 36

   58 expression: . VALUE
   59           | . IDENTIFIER
   60           | . '(' expression ')'
   61           | . expression '[' expressions ']'
   62           | . expression '(' ')'
   63           | . expression '(' expressions ')'
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression "div" expression
   67           | . expression "mod" expression
   68           | . expression "and" expression
   69           | . expression '&' expression
   70           | . expression '|' expression
   71           | . expression '!' expression
   72           | . expression '+' expression
   73           | . expression '-' expression
   74           | . expression "or" expression
   75           | . expression '=' expression
   76           | . expression "<>" expression
   77           | . expression '<' expression
   78           | . expression "<=" expression
   79           | . expression '>' expression
   80           | . expression ">=" expression
   81           | . expression "in" expression
   82           | . expression "or else" expression
   83           | . expression "and then" expression
   84           | . '~' expression
   84           | '~' . expression
   85           | . "not" expression
   86           | . '+' expression
   87           | . '-' expression

    IDENTIFIER  shift, and go to state 31
    VALUE       shift, and go to state 32
    "not"       shift, and go to state 33
    '+'         shift, and go to state 34
    '-'         shift, and go to state 35
    '~'         shift, and go to state 36
    '('         shift, and go to state 37

    expression  go to state 52


State 37

   58 expression: . VALUE
   59           | . IDENTIFIER
   60           | . '(' expression ')'
   60           | '(' . expression ')'
   61           | . expression '[' expressions ']'
   62           | . expression '(' ')'
   63           | . expression '(' expressions ')'
   64           | . expression '*' expression
   65           | . expression '/' expression
   66           | . expression "div" expression
   67           | . expression "mod" expression
   68           | . expression "and" expression
   69           | . expression '&' expression
   70           | . expression '|' expression
   71           | . expression '!' expression
   72           | . expression '+' expression
   73           | . expression '-' expression
   74           | . expression "or" expression
   75           | . expression '=' expression
   76           | . expression "<>" expression
   77           | . expression '<' expression
   78           | . expression "<=" expression
   79           | . expression '>' expression
   80           | . expression ">=" expression
   81           | . expression "in" expression
   82           | . expression "or else" expression
   83           | . expression "and then" expression
   84           | . '~' expression
   85           | . "not" expression
   86           | . '+' expression
   87           | . '-' expression

    IDENTIFIER  shift, and go to state 31
    VALUE       shift, and go to state 32
    "not"       shift, and go to state 33
    '+'         shift, and go to state 34
    '-'         shift, and go to state 35
    '~'         shift, and go to state 36
    '('         shift, and go to state 37

    expression  go to state 53


State 38

   18 constDecl: identifiers '=' expression .  [';']
   61 expression: expression . '[' expressions ']'
   62           | expression . '(' ')'
   63           | expression . '(' expressions ')'
   64           | expression . '*' expression
   65           | expression . '/' expression
   66           | expression . "div" expression
   67           | expression . "mod" expression
   68           | expression . "and" expression
   69           | expression . '&' expression
   70           | expression . '|' expression
   71           | expression . '!' expression
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . "or" expression
   75           | expression . '=' expression
   76           | expression . "<>" expression
   77           | expression . '<' expression
   78           | expression . "<=" expression
   79           | expression . '>' expression
   80           | expression . ">=" expression
   81           | expression . "in" expression
   82           | expression . "or else" expression
   83           | expression . "and then" expression

    "or else"   shift, and go to state 54
    "and then"  shift, and go to state 55
    "<>"        shift, and go to state 56
    "<="        shift, and go to state 57
    ">="        shift, and go to state 58
    "in"        shift, and go to state 59
    "or"        shift, and go to state 60
    "div"       shift, and go to state 61
    "mod"       shift, and go to state 62
    "and"       shift, and go to state 63
    '='         shift, and go to state 64
    '<'         shift, and go to state 65
    '>'         shift, and go to state 66
    '+'         shift, and go to state 67
    '|'         shift, and go to state 68
    '!'         shift, and go to state 69
    '*'         shift, and go to state 70
    '/'         shift, and go to state 71
    '&'         shift, and go to state 72
    '-'         shift, and go to state 73
    '['         shift, and go to state 74
    '('         shift, and go to state 75

    $default  reduce using rule 18 (constDecl)


State 39

   19 constDecl: identifiers ':' DATATYPE . '=' expression

    '='  shift, and go to state 76


State 40

   20 constDecl: identifiers ':' SET . OF subscript
   21          | identifiers ':' SET . OF '(' expressions ')'

    OF  shift, and go to state 77


State 41

   22 varDecls: . varDecl ';' varDecls
   22         | varDecl ';' . varDecls
   23         | . varDecl ';'
   23         | varDecl ';' .  [HALT, FUNCTION, PROCEDURE, IDENTIFIER, VALUE, BEGGIN, IF, WHILE, FOR, REPEAT, "not", '+', '-', '~', '(', ';']
   24 varDecl: . identifiers ':' DATATYPE '=' expression
   25        | . identifiers ':' DATATYPE
   26        | . identifiers ':' SET OF subscript
   27        | . identifiers ':' SET OF '(' expressions ')'
   28        | . identifiers ':' ARRAY '[' subscripts ']' OF DATATYPE
   29        | . identifiers ':' ARRAY '[' DATATYPE ']' OF DATATYPE
   32 identifiers: . IDENTIFIER ',' identifiers
   33            | . IDENTIFIER

    IDENTIFIER  shift, and go to state 9

    IDENTIFIER  [reduce using rule 23 (varDecls)]
    $default    reduce using rule 23 (varDecls)

    varDecls     go to state 78
    varDecl      go to state 25
    identifiers  go to state 26


State 42

   24 varDecl: identifiers ':' . DATATYPE '=' expression
   25        | identifiers ':' . DATATYPE
   26        | identifiers ':' . SET OF subscript
   27        | identifiers ':' . SET OF '(' expressions ')'
   28        | identifiers ':' . ARRAY '[' subscripts ']' OF DATATYPE
   29        | identifiers ':' . ARRAY '[' DATATYPE ']' OF DATATYPE

    DATATYPE  shift, and go to state 79
    SET       shift, and go to state 80
    ARRAY     shift, and go to state 81


State 43

   30 funcDecl: IDENTIFIER . params ':' DATATYPE ';'
   38 params: . '(' params1 ')'
   39       | . %empty  [':']

    '('  shift, and go to state 82

    $default  reduce using rule 39 (params)

    params  go to state 83


State 44

    7 var: . VAR varDecls
    8    | . %empty  [HALT, IDENTIFIER, VALUE, BEGGIN, IF, WHILE, FOR, REPEAT, "not", '+', '-', '~', '(', ';']
   11 function: FUNCTION funcDecl . var statement ';'

    VAR  shift, and go to state 18

    $default  reduce using rule 8 (var)

    var  go to state 84


State 45

   14 procedure: PROCEDURE . procDecl var statement ';'
   31 procDecl: . IDENTIFIER params ';'

    IDENTIFIER  shift, and go to state 85

    procDecl  go to state 86


State 46

    1 code: program uses const var functions procedures . main
   15 main: . BEGGIN statements END '.'

    BEGGIN  shift, and go to state 87

    main  go to state 88


State 47

   12 procedures: . procedure procedures
   12           | procedure . procedures
   13           | . %empty  [BEGGIN]
   14 procedure: . PROCEDURE procDecl var statement ';'

    PROCEDURE  shift, and go to state 45

    $default  reduce using rule 13 (procedures)

    procedures  go to state 89
    procedure   go to state 47


State 48

    9 functions: function functions .

    $default  reduce using rule 9 (functions)


State 49

   61 expression: expression . '[' expressions ']'
   62           | expression . '(' ')'
   63           | expression . '(' expressions ')'
   64           | expression . '*' expression
   65           | expression . '/' expression
   66           | expression . "div" expression
   67           | expression . "mod" expression
   68           | expression . "and" expression
   69           | expression . '&' expression
   70           | expression . '|' expression
   71           | expression . '!' expression
   72           | expression . '+' expression
   73           | expression . '-' expression
   74           | expression . "or" expression
   75           | expression . '=' expression
   76           | expression . "<>" expression
   77           | expression . '<' expression
   78           | expression . "<=" expression
   79           | expression . '>' expression
   80           | expression . ">=" expression
   81           | expression . "in" expression
   82           | expression . "or else" expression
   83           | expression . "and then" expression
   85           | "not" expression .  [END, THEN, ELSE, TO, DO, UNTIL, "or else", "and then", ":=", "<>", "<=", ">=", "in", "or", "div", "mod", "and", '=', '<', '>', '+', '|', '!', '*', '/', '&', '-', ';', ')', ']', ',', ".."]

    '['  shift, and go to state 74
    '('  shift, and go to state 75

    $default  reduce using rule 85 (expression)
